[package]
name = "henyey-app"
description = "Application orchestration for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "henyey_app"
path = "src/lib.rs"

[dependencies]
# Workspace crates
henyey-common.workspace = true
henyey-crypto.workspace = true
henyey-db.workspace = true
henyey-bucket.workspace = true
henyey-history.workspace = true
henyey-historywork.workspace = true
henyey-overlay.workspace = true
henyey-scp.workspace = true
henyey-herder.workspace = true
henyey-ledger.workspace = true
henyey-tx.workspace = true
henyey-work.workspace = true

# Stellar XDR
stellar-xdr.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
x25519-dalek.workspace = true
rand.workspace = true

# HTTP server
axum.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Encoding
hex.workspace = true
base64.workspace = true

# URL handling
url.workspace = true
fs2.workspace = true

# Compression
flate2.workspace = true

# Synchronization primitives
parking_lot.workspace = true

# Memory management (for malloc_trim on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
