[package]
name = "henyey-app"
description = "Application orchestration for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "henyey_app"
path = "src/lib.rs"

[features]
default = []
loadgen = []
test-utils = ["henyey-herder/test-utils", "henyey-ledger/test-utils"]

[dependencies]
# Workspace crates
henyey-common.workspace = true
henyey-clock.workspace = true
henyey-crypto.workspace = true
henyey-db.workspace = true
henyey-bucket.workspace = true
henyey-history.workspace = true
henyey-historywork.workspace = true
henyey-overlay.workspace = true
henyey-scp.workspace = true
henyey-herder.workspace = true
henyey-ledger.workspace = true
henyey-tx.workspace = true
henyey-work.workspace = true

# Stellar XDR
stellar-xdr.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
x25519-dalek.workspace = true
rand.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Encoding
hex.workspace = true
base64.workspace = true
stellar-strkey.workspace = true

# URL handling
url.workspace = true
fs2.workspace = true

# Compression
flate2.workspace = true

# Synchronization primitives
parking_lot.workspace = true

# Memory management (for malloc_trim on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
http-body-util = "0.1"
http = "1"
# Enable test-only instrumentation on henyey-ledger so the regression
# test for #1759 can read `LedgerManager::test_snapshot_count()` to
# assert that the post-close tx-queue re-validation builds exactly one
# snapshot per pass.
henyey-ledger = { workspace = true, features = ["test-utils"] }
# Enable test-only instrumentation on henyey-herder (e.g.
# `TransactionQueue::insert_for_test`) used by the #1759 regression
# test to populate the tx_queue without running admission validation.
henyey-herder = { workspace = true, features = ["test-utils"] }
