[package]
name = "henyey-bucket"
description = "BucketList implementation for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
henyey-common.workspace = true
henyey-crypto.workspace = true
henyey-db.workspace = true

# Compression
flate2.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Utilities
bytes.workspace = true
hex.workspace = true
tempfile.workspace = true
sha2.workspace = true

# Probabilistic filters for fast negative lookups
xorf.workspace = true
siphasher = "0.3"

# Memory-mapped file I/O for disk bucket reads
memmap2 = "0.9"

# Concurrency
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
