[package]
name = "henyey-clock"
description = "Clock abstractions for deterministic simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "henyey_clock"
path = "src/lib.rs"

[dependencies]
futures.workspace = true
tokio.workspace = true
