[package]
name = "henyey-db"
description = "Database abstraction layer for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
henyey-common.workspace = true

# Database
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Utilities
hex.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
