[package]
name = "henyey-db"
description = "Database abstraction layer for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
henyey-common.workspace = true

# Database
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Utilities
hex.workspace = true
base64.workspace = true

# JSON decoding of persisted SCP slot states for atomic purge
# (PersistedSlotState is JSON-encoded by the herder; the atomic purge
# parses it on the same connection inside a transaction). Only `Value`
# is used so the herder's `PersistedSlotState` shape doesn't have to be
# duplicated here.
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
