[package]
name = "henyey"
description = "Pure Rust implementation of Stellar Core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "henyey"
path = "src/main.rs"

[dependencies]
# Workspace crates
henyey-app.workspace = true
henyey-common.workspace = true
henyey-crypto.workspace = true
henyey-db.workspace = true
henyey-bucket.workspace = true
henyey-history.workspace = true
henyey-scp.workspace = true
henyey-ledger.workspace = true

# Stellar XDR
stellar-xdr.workspace = true

# CLI
clap.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Error handling
anyhow.workspace = true

# Encoding
hex.workspace = true
flate2.workspace = true

# Cryptography
sha2.workspace = true

# URL handling
url.workspace = true

# HTTP client
reqwest.workspace = true

# Temp files
tempfile.workspace = true

# Directories
dirs = "5"

[dev-dependencies]
