[package]
name = "henyey-herder"
description = "SCP coordination and ledger close orchestration for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
henyey-common.workspace = true
henyey-crypto.workspace = true
henyey-db.workspace = true
henyey-scp.workspace = true
henyey-overlay.workspace = true
henyey-ledger.workspace = true
henyey-tx.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Data structures
dashmap.workspace = true
parking_lot.workspace = true
rand.workspace = true

# Encoding
hex.workspace = true
stellar-strkey.workspace = true

[features]
test-utils = []

[dev-dependencies]
tempfile.workspace = true
