[package]
name = "henyey-herder"
description = "SCP coordination and ledger close orchestration for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
henyey-common.workspace = true
henyey-crypto.workspace = true
henyey-db.workspace = true
henyey-scp.workspace = true
henyey-overlay.workspace = true
henyey-ledger.workspace = true
henyey-tx.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Metrics (event-site histogram recording)
metrics.workspace = true

# Data structures
dashmap.workspace = true
parking_lot.workspace = true
rand.workspace = true

# Encoding
hex.workspace = true
stellar-strkey.workspace = true

[features]
test-utils = []
# Exposes test hooks (`scp_verify::verify_envelope_sync`,
# `Herder::set_tracking_for_testing`, etc.) used by the Phase B SCP
# verify-pipeline parity tests under `tests/`.
test-support = []

[dev-dependencies]
metrics-exporter-prometheus.workspace = true
tempfile.workspace = true
henyey-bucket.workspace = true
henyey-crypto.workspace = true
henyey-ledger = { workspace = true, features = ["test-utils"] }
henyey-scp = { workspace = true, features = ["test-helpers"] }
sha2.workspace = true
# `raw-api` exposes `DashMap::determine_map`, used by the
# `test_request_at_cap_still_increments_existing` regression test to make the
# shard collision between `first_hash` and `new_hash` deterministic across all
# runners regardless of `num_cpus()`. Purely additive feature.
dashmap = { workspace = true, features = ["raw-api"] }
