[package]
name = "henyey-history"
description = "History archive and catchup for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
henyey-common.workspace = true
henyey-crypto.workspace = true
henyey-db.workspace = true
henyey-bucket.workspace = true
henyey-ledger.workspace = true
henyey-tx.workspace = true

# HTTP client
reqwest.workspace = true
url.workspace = true

# Compression
flate2.workspace = true
zstd.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
rusqlite.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Utilities
bytes.workspace = true
hex.workspace = true
tempfile.workspace = true
sha2.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
axum.workspace = true
