[package]
name = "henyey-history"
description = "History archive and catchup for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
henyey-common.workspace = true
henyey-crypto.workspace = true
henyey-db.workspace = true
henyey-bucket.workspace = true
henyey-ledger.workspace = true
henyey-tx.workspace = true

# Metrics (observability only — fire-and-forget counter/histogram emission)
metrics.workspace = true

# HTTP client
reqwest.workspace = true
url.workspace = true

# Compression
flate2.workspace = true
zstd.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
rusqlite.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Utilities
bytes.workspace = true
hex.workspace = true
tempfile.workspace = true
sha2.workspace = true
parking_lot.workspace = true

# Optional — only used by the `test-utils` feature for building in-process
# history-archive fixtures that integration tests in other crates can consume.
axum = { workspace = true, optional = true }

[features]
# Exposes reusable in-process history-archive fixtures (file:// tree + axum
# server + helper builders) under `henyey_history::test_utils`. Consumed by
# integration tests in `crates/henyey` and elsewhere. Also enabled
# automatically for this crate's own `tests/` via dev-dependencies below.
test-utils = ["dep:axum"]

[dev-dependencies]
tempfile.workspace = true
axum.workspace = true
tracing-subscriber.workspace = true
henyey-history = { path = ".", features = ["test-utils"] }
