[package]
name = "henyey-ledger"
description = "Ledger management for henyey"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
henyey-common.workspace = true
henyey-crypto.workspace = true
henyey-bucket.workspace = true
henyey-tx.workspace = true
henyey-invariant.workspace = true
soroban-env-host-p25.workspace = true
soroban-env-host-p26.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Observability
metrics.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
parking_lot.workspace = true
sha2.workspace = true

# Memory profiling (optional, feature-gated)
tikv-jemalloc-ctl = { workspace = true, optional = true }

[features]
jemalloc = ["dep:tikv-jemalloc-ctl"]
# Enables test-only instrumentation (e.g., snapshot-creation counter on
# `LedgerManager`) so that regression tests in dependent crates can
# assert invariants like "batch validation creates one snapshot per pass"
# (see #1759). Gated behind a feature so production builds pay nothing.
test-utils = []

[dev-dependencies]
soroban-env-host-p24.workspace = true
tempfile.workspace = true
serde_json.workspace = true
hex.workspace = true
base64.workspace = true
hex-literal.workspace = true
tracing-subscriber.workspace = true
