[package]
name = "rs-stellar-core"
description = "Pure Rust implementation of Stellar Core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rs-stellar-core"
path = "src/main.rs"

[dependencies]
# Workspace crates
stellar-core-app.workspace = true
stellar-core-common.workspace = true
stellar-core-crypto.workspace = true
stellar-core-db.workspace = true
stellar-core-bucket.workspace = true
stellar-core-history.workspace = true
stellar-core-historywork.workspace = true
stellar-core-overlay.workspace = true
stellar-core-scp.workspace = true
stellar-core-herder.workspace = true
stellar-core-ledger.workspace = true
stellar-core-tx.workspace = true
stellar-core-work.workspace = true

# Stellar XDR
stellar-xdr.workspace = true

# CLI
clap.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# HTTP server
axum.workspace = true

# Configuration
toml.workspace = true
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Encoding
hex.workspace = true
base64.workspace = true
flate2.workspace = true

# URL handling
url.workspace = true

# HTTP client
reqwest.workspace = true

# Temp files
tempfile.workspace = true

# Directories
dirs = "5"

[dev-dependencies]
