[package]
name = "henyey-simulation"
description = "Deterministic multi-node simulation harness"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "henyey_simulation"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
henyey-app.workspace = true
henyey-bucket.workspace = true
henyey-clock.workspace = true
henyey-common.workspace = true
henyey-crypto.workspace = true
henyey-db.workspace = true
henyey-history.workspace = true
henyey-herder.workspace = true
henyey-ledger.workspace = true
henyey-overlay.workspace = true
henyey-tx.workspace = true
futures.workspace = true
stellar-xdr.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
