[package]
name = "stellar-core-common"
description = "Common types and utilities for rs-stellar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true

thiserror.workspace = true
serde.workspace = true

hex.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
