[package]
name = "stellar-core-crypto"
description = "Pure Rust cryptographic primitives for rs-stellar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
stellar-core-common = { path = "../stellar-core-common" }

# Ed25519 - pure Rust implementation
ed25519-dalek.workspace = true

# X25519 for key exchange - pure Rust
x25519-dalek.workspace = true

# SHA-256 - pure Rust (RustCrypto)
sha2.workspace = true

# HMAC for message authentication
hmac.workspace = true

# Random number generation - pure Rust
rand.workspace = true
rand_chacha.workspace = true
getrandom.workspace = true

# Encoding - pure Rust
hex.workspace = true
base32.workspace = true

# Utilities
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
