[package]
name = "stellar-core-db"
description = "Database abstraction layer for rs-stellar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
stellar-core-common.workspace = true

# Database
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Utilities
bytes.workspace = true
parking_lot.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
