[package]
name = "stellar-core-herder"
description = "SCP coordination and ledger close orchestration for rs-stellar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
stellar-core-common.workspace = true
stellar-core-crypto.workspace = true
stellar-core-db.workspace = true
stellar-core-scp.workspace = true
stellar-core-overlay.workspace = true
stellar-core-ledger.workspace = true
stellar-core-tx.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Data structures
dashmap.workspace = true
parking_lot.workspace = true
rand.workspace = true

# Encoding
hex.workspace = true
stellar-strkey.workspace = true

[dev-dependencies]
tempfile.workspace = true
