[package]
name = "stellar-core-scp"
description = "Stellar Consensus Protocol implementation for rs-stellar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
stellar-strkey.workspace = true
stellar-core-common.workspace = true
stellar-core-crypto.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Data structures
indexmap.workspace = true
im.workspace = true

# Utilities
parking_lot.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
