[package]
name = "stellar-core-simulation"
description = "Simulation harness for rs-stellar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
stellar-core-overlay.workspace = true
stellar-core-crypto.workspace = true
stellar-xdr.workspace = true
tokio.workspace = true

[dev-dependencies]
