[package]
name = "stellar-core-tx"
description = "Transaction processing for rs-stellar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stellar-xdr.workspace = true
stellar-core-common.workspace = true
stellar-core-crypto.workspace = true
stellar-core-db.workspace = true

# Soroban integration
soroban-env-host.workspace = true
soroban-env-common.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true
tracing.workspace = true

# Utilities
bytes.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
